diskann-utils/tests/compile-fail/mat_invariant.stderr
error: lifetime may not live long enough
  --> tests/compile-fail/mat_invariant.rs:16:5
   |
12 | fn bad<'long, 'short>(v: Mat<RowMajor<&'long u8>>) -> Mat<RowMajor<&'short u8>>
   |        -----  ------ lifetime `'short` defined here
   |        |
   |        lifetime `'long` defined here
...
16 |     v
   |     ^ function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Mat<RowMajor<&u8>>`, which makes the generic argument `RowMajor<&u8>` invariant
   = note: the struct `Mat<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
